IMPALA-6900: Fix the min version invariant for invalidate metadata

Current flow of invalidate metadata is as follows.

1. Catalog server records the global catalog version *before* reset()
2. Catalog server invalidates all the metadata.
3. Catalog server returns the version recorded in step (1)
4. Coordinator should wait until the minimum version across all the
   local catalog objects is > the version returned in the step (3).

However, the invariant in step 4 on the coordinator side was incorrectly
coded resulting in an early termination of the wait loop.
This breaks the invalidate metadata contract and the subsequent queries
can fail while resolving catalog objects in the local cache.

Testing: I could reproduce this issue reliably on a pristine HMS with
high --statestore_update_frequency_ms (see IMPALA-7605 for details).
With the patch, I'm not able to reproduce it.

Change-Id: I22ace3f5917b6167af63c3dfd2620e69ce8ec1cb
Reviewed-on: http://gerrit.cloudera.org:8080/12547
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>